[package]
name = "goxoy-socket-server"
version = "0.1.0"
edition = "2021"
authors = ["Omer GOKSOY <goksoy.omer@gmail.com>"]
description = "Goxoy Socket Server Library"
license = "MIT"
keywords = ["socket-server"]
rust-version ="1.66.1"
repository = "https://github.com/Goxoy/goxoy-socket-server/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goxoy-address-parser = "0.0.3"
goxoy-socket-client = "0.1.6"